--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -34,7 +34,6 @@ nav > ul > li {
     padding-right: 10px;
     margin-left: 25px;
     margin-right: 25px;
-
 }
 
 h1 {
@@ -50,34 +49,43 @@ h1 {
     display: inline-block;
 }
 
+main {
+    display: grid;
+    grid-template-columns: 30% 35% 30%;
+    place-items: center;
+}
+
 section.school img.left {
-    margin-left: 10%;
     display: inline-block;
-    width: 25%;
+    width: 100%;
+    min-width: 150px;
     height: auto;
     vertical-align: middle;
 }
 
-section.school img.right {
-
-    margin-top: 2%;
-    margin-left: 10%;
+section.school a {
     display: inline-block;
-    width: 20%;
+    width: 60%;
+}
+
+section.school img.right {
+    display: inline-block;
+    width: 60%;
+    min-width: 200px;
     height: auto;
     vertical-align: middle;
 }
 
 section.school p {
     vertical-align: top;
-    margin-top: 40px;
-    margin-left: 5%;
     text-align: center;
     display: inline-block;
     background-color: rgb(253, 236, 204);
     color: rgb(12, 12, 85);
     font-size: 24px;
-    width: 17%;
+    width: 75%;
+    min-width: 200px;
+    height: fit-content;
 }
 
 p.box {
