--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,10 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Style+Script&display=swap');
+
+html, body {
+    height: 100%;
+}
 
 section.school {
     background-image: url('../img/Entrance_to_Inglemoor_High_School.webp');
     background-position: center top;
     background-size: 100% auto;
     background-repeat: no-repeat;
+    height: 100%;
     font-family: 'Josefin Sans', 'Lucida Sans', Verdana, sans-serif;
 }
 
@@ -13,11 +18,19 @@ section.sky {
     background-repeat: repeat;
 }
 
+section.pine {
+    background-image: url('../img/pine-needles2.jpg');
+    background-repeat: repeat;
+    display: grid;
+    place-items: center;
+    margin-bottom: 100px;
+}
+
 nav {
     display: block;
     text-align: center;
     margin: auto;
-    background-color: #5a741f;
+    background-color: #506b10;
     color: rgb(253, 236, 204);
     font-size: 1.5em;
     display: inline-block;
@@ -29,6 +42,7 @@ nav > ul {
 }
 
 nav > ul > li {
+    font-family: 'Josefin Sans', 'Lucida Sans', Verdana, sans-serif;
     display: inline-block;
     padding-left: 10px;
     padding-right: 10px;
@@ -36,12 +50,32 @@ nav > ul > li {
     margin-right: 25px;
 }
 
+nav > ul > li > a {
+    text-decoration: none;
+}
+
+nav li a:visited {
+    color: rgb(253, 236, 204);
+}
+
+nav li a:hover {
+    color: rgb(248, 209, 33);
+}
+
 h1 {
     text-align: center;
+    font-family: 'Josefin Sans', 'Lucida Sans', Verdana, sans-serif;
     font-size: 3em;
     color: rgb(253, 236, 204);
     text-shadow: 4px 4px 0 #000, 2px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
+
+h2, h3 {
+    text-align: center;
+    font-family: 'Josefin Sans', 'Lucida Sans', Verdana, sans-serif;
+    color: black;
+}
+
 
 .center {
     margin: auto;
@@ -64,7 +98,7 @@ section.school img.left {
     vertical-align: middle;
 }
 
-section.school a {
+section.school > main > a {
     display: inline-block;
     width: 60%;
 }
@@ -77,9 +111,8 @@ section.school img.right {
     vertical-align: middle;
 }
 
-section.school p {
+section div.box {
     vertical-align: top;
-    text-align: center;
     display: inline-block;
     background-color: rgb(253, 236, 204);
     color: rgb(12, 12, 85);
@@ -87,12 +120,32 @@ section.school p {
     width: 75%;
     min-width: 200px;
     height: fit-content;
-}
-
-p.box {
     border-color: rgb(12, 97, 34);
     border-radius: 10px;
     border: 5px solid;
     border-style: double;
+    padding: 20px;
+}
+
+section.pine div.box p {
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+}
+
+blockquote {
+    text-align: center;
+    font-family: 'Style Script';
+    font-size: 32px;
+}
+
+blockquote.attrib {
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 24px;
+    text-align: right;
+    margin-top: -25px;
+}
+
+section p {
+    display: inline-block;
     padding: 10px;
+    height: 20px;
 }
