--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -13,14 +13,10 @@ section.school {
     font-family: 'Josefin Sans', 'Lucida Sans', Verdana, sans-serif;
 }
 
-section.sky {
-    background-image: url('../img/blue-sky-clouds-repeat.jpg');
-    background-repeat: repeat;
-}
-
 section.pine {
-    background-image: url('../img/pine-needles2.jpg');
+    background-image: url('../img/pine-needles-small.jpg');
     background-repeat: repeat;
+    background-size: 100px 150px;
     display: grid;
     place-items: center;
     margin-bottom: 100px;
@@ -29,6 +25,7 @@ section.pine {
 section.leaf {
     background-image: url('../img/leaf.webp');
     background-repeat: repeat;
+    background-size: 600px 399px;
     display: grid;
     place-items: center;
     margin-bottom: 100px;
@@ -62,11 +59,12 @@ nav > ul > li > a {
     text-decoration: none;
 }
 
-nav li a:visited {
+
+nav li > a:link, nav li > a:visited {
     color: rgb(253, 236, 204);
 }
 
-nav li a:hover {
+nav li > a:hover {
     color: rgb(248, 209, 33);
 }
 
@@ -76,12 +74,14 @@ h1 {
     font-size: 3em;
     color: rgb(253, 236, 204);
     text-shadow: 4px 4px 0 #000, 2px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+    margin-top: 100px;
 }
 
 h2, h3 {
     text-align: center;
     font-family: 'Josefin Sans', 'Lucida Sans', Verdana, sans-serif;
     color: black;
+    margin-bottom: auto;
 }
 
 
@@ -133,6 +133,7 @@ section div.box {
     border: 5px solid;
     border-style: double;
     padding: 20px;
+    margin-top: 50px;
 }
 
 section.pine div.box p {
