--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,7 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Style+Script&display=swap');
 
-html, body {
+html,
+body {
+    width: 100%;
     height: 100%;
+    margin: 0;
 }
 
 section.school {
@@ -9,8 +12,8 @@ section.school {
     background-position: center top;
     background-size: 100% auto;
     background-repeat: no-repeat;
-    height: 100%;
-    font-family: 'Josefin Sans', 'Lucida Sans', Verdana, sans-serif;
+    display: grid;
+    place-items: center;
 }
 
 section.pine {
@@ -32,39 +35,87 @@ section.leaf {
 }
 
 nav {
-    display: block;
     text-align: center;
-    margin: auto;
+    padding-top: 20px;
+    padding-bottom: 5px;
+    margin-bottom: 5px;
     background-color: #506b10;
     color: rgb(253, 236, 204);
-    font-size: 1.5em;
     display: inline-block;
     width: 100%;
-}
-
-nav > ul {
-    display: inline-block;
-}
-
-nav > ul > li {
+    align-items: center;
+    overflow: hidden;
     font-family: 'Josefin Sans', 'Lucida Sans', Verdana, sans-serif;
-    display: inline-block;
-    padding-left: 10px;
-    padding-right: 10px;
-    margin-left: 25px;
-    margin-right: 25px;
 }
 
-nav > ul > li > a {
+nav a:link,
+nav a:visited {
+    color: rgb(253, 236, 204);
+}
+
+nav a:hover {
+    color: rgb(248, 209, 33);
+}
+
+/* Navigation links */
+nav a {
+    float: center;
+    font-size: 1.3em;
+    color: rgb(253, 236, 204);
+    text-align: center;
+    padding: 14px 16px;
     text-decoration: none;
 }
 
-
-nav li > a:link, nav li > a:visited {
-    color: rgb(253, 236, 204);
+/* The subnavigation menu */
+.subnav {
+    float: right;
+    margin-right: 15%;
+    overflow: hidden;
 }
 
-nav li > a:hover {
+/* Subnav button */
+.subnavbtn {
+    font-size: 1.3em;
+    border: none;
+    outline: none;
+    color: rgb(253, 236, 204);
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+}
+
+/* Style the subnav content - positioned absolute */
+.subnav-content {
+    display: none;
+    position: absolute;
+    right: 0;
+    background-color: #506b10;
+    width: 100%;
+    z-index: 1;
+    float: right;
+    margin-top: 5px;
+}
+
+/* Style the subnav links */
+.subnav-content a {
+    color: rgb(253, 236, 204);
+    text-decoration: none;
+    margin-left: 0;
+    margin-right: 0;
+    font-size: 18px;
+    padding: 50px 20px;
+}
+
+.subnav:hover .subnavbtn {
+    color: rgb(248, 209, 33);
+}
+
+/* When you move the mouse over the subnav container, open the subnav content */
+.subnav:hover .subnav-content,
+.subnav-content:hover {
+    display: block;
     color: rgb(248, 209, 33);
 }
 
@@ -77,13 +128,13 @@ h1 {
     margin-top: 100px;
 }
 
-h2, h3 {
+h2,
+h3 {
     text-align: center;
     font-family: 'Josefin Sans', 'Lucida Sans', Verdana, sans-serif;
     color: black;
     margin-bottom: auto;
 }
-
 
 .center {
     margin: auto;
@@ -96,6 +147,7 @@ main {
     grid-template-columns: 30% 35% 30%;
     place-items: center;
     margin-top: 100px;
+    font-family: 'Josefin Sans', 'Lucida Sans', Verdana, sans-serif;
 }
 
 section.school img.left {
@@ -106,7 +158,7 @@ section.school img.left {
     vertical-align: middle;
 }
 
-section.school > main > a {
+section.school>main>a {
     display: inline-block;
     width: 60%;
 }
@@ -118,6 +170,24 @@ section.school img.right {
     height: auto;
     vertical-align: middle;
 }
+
+section.school p,
+section.school div.box {
+    vertical-align: top;
+    display: inline-block;
+    background-color: rgb(253, 236, 204);
+    color: rgb(12, 12, 85);
+    font-size: 24px;
+    width: 75%;
+    min-width: 200px;
+    height: fit-content;
+}
+
+section.school div.box.intasc p {
+    width: 95%;
+    padding: 2%;
+} 
+
 
 section div.box {
     vertical-align: top;
@@ -137,7 +207,7 @@ section div.box {
 }
 
 section.pine div.box p {
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
 
 blockquote {
@@ -147,14 +217,8 @@ blockquote {
 }
 
 blockquote.attrib {
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 24px;
     text-align: right;
     margin-top: -25px;
-}
-
-section p {
-    display: inline-block;
-    padding: 10px;
-    height: 20px;
 }
