--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -96,7 +96,7 @@ nav a {
     width: 100%;
     z-index: 1;
     float: right;
-    padding: 5px;
+    padding: 15px;
 }
 
 /* default to an open subnav menu when viewing a submenu page */
@@ -106,12 +106,13 @@ section.intasc .subnav-content {
 
 /* Style the subnav links */
 .subnav-content a {
-    color: rgb(253, 236, 204);
     text-decoration: none;
-    margin-top: 10px;
     margin-left: 0;
     margin-right: 0;
-    font-size: 18px;
+    font-size: 15px;
+    padding: 12px 8px;
+    word-spacing: -2px;
+    white-space: nowrap;
 }
 
 .subnavbtn:hover,
