--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Style+Script&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Playwrite+AU+NSW:wght@100..400&display=swap');
 
 html,
 body {
@@ -140,6 +140,39 @@ nav a {
     padding: 14px 16px;
     text-decoration: none;
 }
+
+#learner {
+    color: rgb(247, 109, 116);
+}
+
+#content {
+    color: rgb(166, 209, 177);
+}
+
+#instructional {
+    color: rgb(165, 209, 238);
+}
+
+#professional {
+    color: rgb(206, 134, 228);
+}
+
+#learner:hover {
+    color: rgb(248, 209, 33);
+}
+
+#content:hover {
+    color: rgb(248, 209, 33);
+}
+
+#instructional:hover {
+    color: rgb(248, 209, 33);
+}
+
+#professional:hover {
+    color: rgb(248, 209, 33);
+}
+
 
 /* The subnavigation menu */
 .subnav {
@@ -301,7 +334,7 @@ section div.box {
 }
 
 section div.box.quote {
-    width: 550px;
+    width: 630px;
     margin-top: 12px;
 }
 
@@ -319,8 +352,8 @@ section div.box p, section div.box ul, section div.box ol {
 
 blockquote.quote {
     text-align: center;
-    font-family: 'Style Script';
-    font-size: 32px;
+    font-family: 'Playwrite AU NSW';
+    font-size: 27px;
 }
 
 blockquote.attrib {
