--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -99,7 +99,7 @@ div.grid2 {
     grid-template-columns: 50% 50%;
 }
 
-section {
+section.intasc {
     padding-bottom: 10px;
     margin-bottom: 10px;
 }
@@ -304,7 +304,7 @@ h2.left {
     font-style: italic;
 }
 
-main {
+div.main {
     display: grid;
     grid-template-columns: 30% 35% 30%;
     place-items: center;
