--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -26,29 +26,30 @@ section.inglemoor-pine {
     background-image: url('../img/Entrance_to_Inglemoor_High_School.webp'), url('../img/pine-needles-small.jpg');
     background-repeat: no-repeat, repeat;
     background-size: 100% auto, 100px 150px;
-}
-
-section.inglemoor-leaf {
-    background-image: url('../img/Entrance_to_Inglemoor_High_School.webp'), url('../img/leaves.png');
-    background-repeat: no-repeat, repeat;
-    background-size: 100% auto, 100px 150px;
+    display: grid;
+    background-attachment: fixed;
+    place-items: center;
 }
 
 section.cwusign {
     background-image: url('../img/CWU_sign.jpg'), url('../img/leaves.png');
     background-repeat: no-repeat, repeat;
     background-size: 100% auto, 100px 100px;
+    background-attachment: fixed;
 }
 
 section.cwu {
     background-image: url('../img/CWU_building.jpg');
     background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 section.lwtech {
     background-image: url('../img/lwtech.jpg'), url('../img/stones.webp');
     background-repeat: no-repeat, repeat;
     background-size: 100% auto, 100px 100px;
+    display: grid;
+    place-items: center;
 }
 
 section.pine {
