--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -14,12 +14,12 @@ section.school {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
 }
 
 section.inglemoor {
     background-image: url('../img/Entrance_to_Inglemoor_High_School.webp');
     background-repeat: no-repeat;
+    width: 100%;
 }
 
 section.inglemoor-pine {
@@ -35,7 +35,9 @@ section.cwusign {
     background-image: url('../img/CWU_sign.jpg'), url('../img/leaves.png');
     background-repeat: no-repeat, repeat;
     background-size: 100% auto, 100px 100px;
+    display: grid;
     background-attachment: fixed;
+    place-items: center;
 }
 
 section.cwu {
@@ -76,12 +78,6 @@ section.intasc.grid3 {
     grid-template-columns: 40% 31% 26%;
 }
 
-section.intasc.grid3b {
-    display: grid;
-    grid-template-columns: 33% 33% 33%;
-    gap: 10px;
-}
-
 section.grid1,
 div.grid1 {
     display: grid;
@@ -90,7 +86,8 @@ div.grid1 {
     margin-bottom: 10px;
 }
 
-div.grid1 img, embed {
+div.grid1 img,
+embed {
     margin-top: 10px;
     margin-bottom: 10px;
 }
@@ -104,18 +101,12 @@ div.grid2 {
     margin-right: 2%;
     grid-template-columns: 50% 50%;
     gap: 15px;
+    width: 90%;
 }
 
 section.intasc {
     padding-bottom: 10px;
     margin-bottom: 10px;
-}
-
-div.grid2b {
-    display: grid;
-    place-items: center;
-    grid-template-columns: 35% 55%;
-    gap: 100px;
 }
 
 div.grid2 img,
@@ -268,6 +259,27 @@ section.intasc .subnav-content {
     color: rgb(248, 209, 33);
 }
 
+table {
+    margin: 5px;
+}
+
+col.name {
+    width: 40%;
+}
+
+col.url {
+    width: 40%;
+}
+
+col.city {
+    width: 20%;
+}
+
+td {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    padding: 5px;
+}
+
 h1 {
     text-align: center;
     font-family: 'Josefin Sans', 'Lucida Sans', Verdana, sans-serif;
@@ -322,6 +334,47 @@ iframe {
     margin-bottom: 10px;
 }
 
+embed {
+    width: 95%;
+    height: 95%;
+    min-height: 900px;
+}
+
+embed.short {
+    height: 70%;
+    min-height: 700px;
+}
+
+div.video {
+    width: 100%;
+    margin-top: 2%;
+    margin-right: 1%;
+    margin-bottom: 1%;
+    vertical-align: center;
+}
+
+div.video iframe {
+    margin-right: 10%;
+    vertical-align: center;
+    border: none;
+    width: 100%;
+    height: auto;
+}
+
+div.video>div {
+    position: relative;
+    padding-bottom: 56.25%;
+    /* 16:9 ratio required for YouTube videos */
+}
+
+div.video>div>iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 section.school img.left {
     display: inline-block;
     width: 100%;
@@ -360,9 +413,11 @@ section.school div.box.title {
     width: 400px;
 }
 
+/*
 div.box.intasc p {
     width: 100%;
 }
+*/
 
 section div.box {
     vertical-align: top;
@@ -384,10 +439,6 @@ section div.box {
 section div.box.quote {
     width: 630px;
     margin-top: 12px;
-}
-
-section div.box.intasc {
-    margin-left: 6%;
 }
 
 section div.box.pdf {
