--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -100,7 +100,6 @@ section.grid2,
 div.grid2 {
     display: grid;
     place-items: center;
-    grid-template-columns: 50% 50%;
     margin-left: 2%;
     margin-right: 2%;
     grid-template-columns: 50% 50%;
@@ -325,33 +324,49 @@ h2.left {
 }
 
 div.main {
-    display: grid;
-    grid-template-columns: 30% 35% 30%;
-    place-items: center;
     margin-top: 100px;
     font-family: 'Josefin Sans', 'Lucida Sans', Verdana, sans-serif;
+    display: inline-block;
+    justify-content: center;
+    /* space images and title evenly */
+    align-items: center;
+    gap: 20px;
+    flex-wrap: wrap;
+    /* allows items to move to new line if screen is too small */
+    text-align: center;
+    width: 100%;
+}
+
+div#title {
+    width: 400px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 iframe {
     border: none;
     margin-top: 10px;
     margin-bottom: 10px;
+    background-color: white;
 }
 
 embed {
     width: 95%;
     height: 95%;
     min-height: 900px;
+    background-color: white;
 }
 
 embed.resume {
     width: 50%;
     max-width: 800px;
+    background-color: white;
 }
 
 embed.short {
     height: 70%;
     min-height: 700px;
+    background-color: white;
 }
 
 div.video {
@@ -385,8 +400,9 @@ div.video>div>iframe {
 }
 
 section.school img.left {
-    display: inline-block;
-    width: 100%;
+    float: left;
+    margin-left: 5%;
+    width: 21%;
     min-width: 150px;
     height: auto;
     vertical-align: middle;
@@ -394,13 +410,14 @@ section.school img.left {
 
 section.school>main>a {
     display: inline-block;
-    width: 60%;
+    width: 20%;
 }
 
 section.school img.right {
-    display: inline-block;
-    width: 60%;
-    min-width: 200px;
+    float: right;
+    margin-right: 5%;
+    width: 16%;
+    min-width: 110px;
     height: auto;
     vertical-align: middle;
 }
@@ -463,4 +480,25 @@ blockquote.attrib {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 24px;
     text-align: right;
+}
+
+@media only screen and (max-width: 800px) {
+
+    section.grid2,
+    div.grid2 {
+        display: grid;
+        place-items: center;
+        grid-template-columns: 100%;
+        margin-left: auto;
+        margin-right: auto;
+        gap: 0px;
+        width: 100%;
+    }
+
+    section.intasc.grid3 {
+        display: grid;
+        align-items: start;
+        grid-template-columns: 100%;
+    }
+
 }
